force-app/main/default/objects/Contact/fields/Another_Widget__c.field-meta.xml
<CustomField>
    <fullName>Another_Widget__c</fullName>
    <label>Another Widget</label>
    <length>100</length>
    <type>Text</type>
</CustomField>