force-app/main/default/objects/Contact/fields/Anything__c.field-meta.xml
<CustomField>
    <fullName>Anything__c</fullName>
    <label>Anything</label>
    <length>144</length>
    <type>Text</type>
</CustomField>