force-app/main/default/objects/Contact/fields/bla__c.field-meta.xml
<CustomField>
    <fullName>bla__c</fullName>
    <label>bla</label>
    <length>200</length>
    <type>Text</type>
</CustomField>