force-app/main/default/objects/Contact/fields/boo_blah__c.field-meta.xml
<CustomField>
    <fullName>boo_blah__c</fullName>
    <label>boo blah</label>
    <length>200</length>
    <type>Text</type>
</CustomField>