force-app/main/default/objects/Contact/fields/boo_nany__c.field-meta.xml
<CustomField>
    <fullName>boo_nany__c</fullName>
    <label>boo nany</label>
    <length>200</length>
    <type>Text</type>
</CustomField>