force-app/main/default/objects/Contact/fields/eds_change__c.field-meta.xml
<CustomField>
    <fullName>eds_change__c</fullName>
    <label>Ed&apos;s Change</label>
    <length>100</length>
    <type>Text</type>
</CustomField>