force-app/main/default/objects/Contact/fields/Fav_Color__c.field-meta.xml
<CustomField>
    <fullName>Fav_Color__c</fullName>
    <label>Fav Color</label>
    <length>22</length>
    <type>Text</type>
</CustomField>