force-app/main/default/objects/Contact/fields/favorite_color__c.field-meta.xml
<CustomField>
    <fullName>favorite_color__c</fullName>
    <label>favorite_color</label>
    <length>200</length>
    <type>Text</type>
</CustomField>