force-app/main/default/objects/Contact/fields/Favorite_Food__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Food__c</fullName>
    <label>Favorite Food</label>
    <length>144</length>
    <type>Text</type>
</CustomField>