force-app/main/default/objects/Contact/fields/Favorite_Letter__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Letter__c</fullName>
    <label>Favorite Letter</label>
    <length>12</length>
    <type>Text</type>
</CustomField>