force-app/main/default/objects/Contact/fields/Favorite_Number__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Number__c</fullName>
    <label>Favorite Number</label>
    <length>144</length>
    <type>Text</type>
</CustomField>