force-app/main/default/objects/Contact/fields/Favorite_Shape__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Shape__c</fullName>
    <label>Favorite Shape</label>
    <length>50</length>
    <type>Text</type>
</CustomField>