force-app/main/default/objects/Contact/fields/foo_bar_baz__c.field-meta.xml
<CustomField>
    <fullName>foo_bar_baz__c</fullName>
    <label>foo bar baz</label>
    <length>200</length>
    <type>Text</type>
</CustomField>