force-app/main/default/objects/Contact/fields/foo_barbara__c.field-meta.xml
<CustomField>
    <fullName>foo_barbara__c</fullName>
    <label>foo barbara</label>
    <length>200</length>
    <type>Text</type>
</CustomField>