force-app/main/default/objects/Contact/fields/FooBar_Widget__c.field-meta.xml
<CustomField>
    <fullName>FooBar_Widget__c</fullName>
    <label>FooBar Widget</label>
    <length>50</length>
    <type>Text</type>
</CustomField>