force-app/main/default/objects/Contact/fields/hello_world__c.field-meta.xml
<CustomField>
    <fullName>hello_world__c</fullName>
    <label>hello world</label>
    <length>200</length>
    <type>Text</type>
</CustomField>