force-app/main/default/objects/Contact/fields/lorem_ipsum__c.field-meta.xml
<CustomField>
    <fullName>lorem_ipsum__c</fullName>
    <label>lorem ipsum</label>
    <length>200</length>
    <type>Text</type>
</CustomField>