force-app/main/default/objects/Contact/fields/new_label__c.field-meta.xml
<CustomField>
    <fullName>new_label__c</fullName>
    <description>this is a new label</description>
    <label>new label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>