force-app/main/default/objects/Contact/fields/New_Widget__c.field-meta.xml
<CustomField>
    <fullName>New_Widget__c</fullName>
    <label>New Widget</label>
    <length>50</length>
    <type>Text</type>
</CustomField>