force-app/main/default/objects/Contact/fields/something__c.field-meta.xml
<CustomField>
    <fullName>something__c</fullName>
    <label>something</label>
    <length>144</length>
    <type>Text</type>
</CustomField>