force-app/main/default/objects/Contact/fields/Walkthrough_Field__c.field-meta.xml
<CustomField>
    <fullName>Walkthrough_Field__c</fullName>
    <label>Walkthrough Field</label>
    <length>144</length>
    <type>Text</type>
</CustomField>