force-app/main/default/objects/Contact/fields/Widget__c.field-meta.xml
<CustomField>
    <fullName>Widget__c</fullName>
    <label>Widget</label>
    <length>150</length>
    <type>Text</type>
</CustomField>